--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ themes/twentysixteen
 themes/twentyseventeen
 themes/blankslate
 themes/index.php
+
+themes/montana/config.rb
+themes/montana/config.codekit
