--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ themes/index.php
 themes/montana/config.rb
 themes/montana/config.codekit
 themes/montana/font
+themes/montana/inc/analyticstracking.php
