Start from Montana

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ themes/montana/config.rb
 themes/montana/config.codekit
 themes/montana/font
 themes/montana/inc/analyticstracking.php
+
+themes/delcanto/config.rb
+themes/delcanto/config.codekit
+themes/delcanto/font
+themes/delcanto/inc/analyticstracking.php
